[package]
name = "breadrecipes"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json="1.0"
bracket-lib = {version="~0.8.1",features=["webgpu"],default-features=false}